--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "pretty-error",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "scripts/js/lib/PrettyError.js",
   "dependencies": {
-    "utila": "~0.1.0",
-    "RenderKid": "~0.2.0-beta.1"
-  },
+    "utila": "~0.3",
+    "renderkid": "~0.1"
+    },
   "devDependencies": {
-    "little-popo": "~0.1.0"
+    "coffee-script": "~1.6.3",
+    "little-popo": "~0.1.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/coffee-script/bin/cake test",
+    "prepublish": "node ./node_modules/coffee-script/bin/cake build"
   },
   "author": "Aria Minaei",
   "license": "MIT"
