--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pretty-error",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "",
   "main": "scripts/js/lib/PrettyError.js",
   "dependencies": {
-    "utila": "~0.3",
-    "renderkid": "~0.1"
+    "utila": "*",
+    "renderkid": "*"
     },
   "devDependencies": {
     "coffee-script": "~1.6.3",
