--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pretty-error",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "",
   "main": "scripts/js/lib/PrettyError.js",
   "dependencies": {
-    "utila": "*",
-    "renderkid": "*"
+    "utila": "~0.3",
+    "renderkid": "~0.2.0-beta.4"
     },
   "devDependencies": {
     "coffee-script": "~1.6.3",
