--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pretty-error",
   "version": "0.1.16",
-  "description": "",
+  "description": "Readable errors for node",
   "main": "scripts/js/lib/PrettyError.js",
   "dependencies": {
     "utila": "~0.3",
