--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pretty-error",
-  "version": "0.1.17",
-  "description": "Readable errors for node",
+  "version": "0.1.18",
+  "description": "See nodejs errors with less clutter",
   "main": "scripts/js/lib/PrettyError.js",
   "dependencies": {
     "utila": "~0.3",
@@ -23,5 +23,8 @@
   },
   "bugs": {
     "url": "https://github.com/AriaMinaei/pretty-error/issues"
-  }
+  },
+  "keywords": [
+    "pretty", "error", "exception", "debug", "error-handling", "readable", "colorful", "prettify", "format", "human"
+  ]
 }
