--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pretty-error",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "See nodejs errors with less clutter",
   "main": "./lib/PrettyError.js",
   "typings": "index.d.ts",
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "utila": "~0.4",
-    "renderkid": "~2.0.0"
+    "renderkid": "^2.0.1"
   },
   "devDependencies": {
     "coffee-script": "~1.8.0",
