--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pretty-error",
-  "version": "2.1.1",
+  "version": "2.2.0-rc.1",
   "description": "See nodejs errors with less clutter",
   "main": "./lib/PrettyError.js",
   "typings": "index.d.ts",
