--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "pretty-error",
-  "version": "2.2.0-rc.1",
+  "version": "3.0.0",
   "description": "See nodejs errors with less clutter",
   "main": "./lib/PrettyError.js",
   "typings": "index.d.ts",
   "scripts": {
     "test": "mocha \"test/**/*.coffee\"",
     "test:watch": "mocha \"test/**/*.coffee\" --watch",
-
     "compile": "coffee --bare --compile --output ./lib ./src",
     "compile:watch": "jitter src lib -b",
-
     "watch": "npm run compile:watch & npm run test:watch",
     "winwatch": "start/b npm run compile:watch & npm run test:watch",
-
     "prepublish": "npm run compile"
   },
   "dependencies": {
@@ -21,10 +18,11 @@
     "renderkid": "^2.0.1"
   },
   "devDependencies": {
-    "coffee-script": "~1.8.0",
     "chai": "~1.9.2",
-    "mocha": "~2.0.1",
-    "jitter": "^1.3.0"
+    "coffee-script": "~1.8.0",
+    "coffeescript": "^1.12.7",
+    "jitter": "^1.3.0",
+    "mocha": "^8.0.1"
   },
   "author": "Aria Minaei",
   "license": "MIT",
