--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepublish": "npm run compile"
   },
   "dependencies": {
-    "utila": "~0.4",
+    "lodash": "^4.17.20",
     "renderkid": "^2.0.1"
   },
   "devDependencies": {
@@ -22,7 +22,7 @@
     "coffee-script": "~1.8.0",
     "coffeescript": "^1.12.7",
     "jitter": "^1.3.0",
-    "mocha": "^8.0.1"
+    "mocha": "^8.2.0"
   },
   "author": "Aria Minaei",
   "license": "MIT",
