--- a/package.json
+++ b/package.json
@@ -7,18 +7,15 @@
   "scripts": {
     "test": "mocha \"test/**/*.coffee\"",
     "test:watch": "mocha \"test/**/*.coffee\" --watch",
-
     "compile": "coffee --bare --compile --output ./lib ./src",
     "compile:watch": "jitter src lib -b",
-
     "watch": "npm run compile:watch & npm run test:watch",
     "winwatch": "start/b npm run compile:watch & npm run test:watch",
-
     "prepublish": "npm run compile"
   },
   "dependencies": {
-    "utila": "~0.4",
-    "renderkid": "^2.0.1"
+    "lodash": "^4.17.20",
+    "renderkid": "^2.0.4"
   },
   "devDependencies": {
     "coffee-script": "~1.8.0",
