--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.20",
-    "renderkid": "^2.0.6"
+    "renderkid": "^2.0.7-dev.1"
   },
   "devDependencies": {
     "chai": "~1.9.2",
