--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "license": "ISC",
   "dependencies": {
-    "pretty-error": "^3.0.4",
-    "renderkid": "^2.0.7-dev.2"
+    "pretty-error": "^3.0.5-dev.1"
   }
 }
